# front_end_code

./: .env  .env.example  .gitignore  0001_initial.py  0002_alter_doctor_work_day.py  0003_alter_doctor_hospital.py  0004_rename_hospital_hospitalsection.py  0005_hospital_rename_hospital_doctor_section_and_more.py  0006_doctor_user_squashed_0010_alter_patient_gender.py  0007_reservation.py  0008_auto_20230518_0210.py  0009_consultation_type.py  0010_consultation_image.py  0011_alter_patient_gender.py  0012_hospital_type.py  0013_auto_20230622_0720.py  0014_alter_reservation_date.py  README.md  addDep.css  addDoc.css  addHos.css  admin.py  build.sh  db.json  db.sqlite3  forms.py  hospital1Consultation.css  hospital1Reservation.css  hospital2Consultation.css  hospital2Dep.css  hospital2Reservation.css  login.css  main(admin).css  main.css  main.js  mainHos1.css  mainHos1.js  mainHos2.css  mainHos2.js  models.py  (+14 more)
