[tool.poetry]
name = "hospital"
version = "0.1.0"
description = ""
authors = ["Ahmed Yasser <ahmedahmedyasseryasser@gmail.com>"]
readme = "README.md"
packages = [{include = "hospital"}]

[tool.poetry.dependencies]
python = "^3.7"
django = "3.2"
django-environ = "^0.10.0"
whitenoise = {extras = ["brotli"], version = "^6.4.0"}
djangorestframework = "^3.14.0"
django-filter = "^23.2"
psycopg2-binary = "^2.9.6"
setuptools = "^67.7.2"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
